# Hazel

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Hazel/: CMakeLists.txt  hzpch.h
Hazel/Core/: Application.cpp  Application.h  Core.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
Hazel/Debug/: Instrumentor.h
Hazel/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.h  EventManager.h  EventType.h  Events.h  MouseEvent.cpp  WindowEvent.h
Hazel/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGlIndexBuffer.cpp  OpenGlIndexBuffer.h  OpenGlRendererAPI.cpp  OpenGlVertexArray.cpp  OpenGlVertexArray.h  OpenGlVertexBuffer.cpp  OpenGlVertexBuffer.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Hazel/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Hazel/Renderer/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.glsl.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Hazel/include/: Application.h  Core.h  EntryPoint.h  Hazel.h  ImGuiLayer.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  Window.h  hzpch.h
Hazel/include/Core/: Application.h  Layer.h  Window.h
Hazel/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/include/Renderer/: BufferLayout.h  GraphicsContext.h  IndexBuffer.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  ShaderLibrary.h  Texture.h  VertexArray.h  VertexBuffer.h
Hazel/src/: Application.cpp  Hazel.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OrthographicCameraController.cpp  Window.cpp  hzpch.cpp  hzpch.h
Hazel/src/Core/: Application.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Window.cpp
Hazel/src/Events/: ApplicationEvent.cpp  Event.cpp  KeyEvent.cpp  MouseEvent.cpp
Hazel/src/Hazel/Components/: Camera.cpp  Camera.h  CameraSettings.h  Transform.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Window.cpp  Window.h
Hazel/src/Hazel/Debug/: Instrumentor.h
Hazel/src/Hazel/ECS/: ComponentArray.h  ComponentManager.h  ECS.cpp  ECS.h  ECSType.h  EntityManager.h  System.h  SystemManager.h
Hazel/src/Hazel/Events/: Event.h  EventManager.h  EventType.h  Events.cpp  Events.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Hazel/src/Hazel/Renderer/: BufferLayout.cpp  BufferLayout.h  GraphicsContext.h  IndexBuffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Hazel/src/Hazel/Systems/: CameraController2D.cpp  CameraController2D.h
Hazel/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGlIndexBuffer.cpp  OpenGlIndexBuffer.h  OpenGlRendererAPI.cpp  OpenGlVertexArray.cpp  OpenGlVertexArray.h  OpenGlVertexBuffer.cpp  OpenGlVertexBuffer.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Hazel/src/Renderer/: BufferLayout.cpp  IndexBuffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  ShaderLibrary.cpp  Texture.cpp  Texture.glsl.h  VertexArray.cpp  VertexBuffer.cpp
Sandbox/: CMakeLists.txt  pch.h
Sandbox/Assets/Shaders/: FlatColor.glsl  Texture.glsl  VertexColor.glsl
Sandbox/include/: ExampleLayer.h  Sandbox2DLayer.h
Sandbox/src/: ExampleLayer.h  Sandbox.cpp  Sandbox2DLayer.h  SandboxApp.cpp  pch.cpp  pch.h
